# finx-ai

./: README.md
finx-agentic/: .env.template  .gitignore  pyproject.toml  requirements.txt  run_api.py
finx-agentic/api/: deps.py  main.py
finx-agentic/api/models/: __init__.py  schemas.py
finx-agentic/api/routes/: agent.py  graph.py  health.py
finx-agentic/config/: __init__.py  config.json  config_loader.py
finx-agentic/docker-build/: docker-compose.yaml
finx-agentic/docs/: text2sql_architecture.md
finx-agentic/examples/: graph_text2sql_demo.py
finx-agentic/scripts/: run_build_schema.py  run_graph_loader.py  run_incremental_sync.py  run_init_graph.py  run_knowledge_agent.py  run_knowledge_playground.py  run_load_schemas.py  run_team_demo.py  run_test_search.py  run_text2sql_playground.py
finx-agentic/scripts/build_graph_schema/: athena_reader.py  domain_generator.py  graph_updater.py  incremental_sync.py  schema_builder.py  schema_change_detector.py
finx-agentic/scripts/graph_schemas/: account_migration_reconcile_summary.json  account_migration_user_pool.json  account_migration_user_pool_precheck.json  all_date.json  d_customer__s4c.json  d_mastercard__s4c.json  dynamic_notification.json  f_gl_balance__mnp.json  f_posting_entry__fa.json  f_posting_entry__fa_adjust.json  f_transaction__fa.json  hub_load_classification.json  hub_payment.json  hub_payment_batch.json  int_posting_entry__op.json  lucky_spin.json  lucky_spin_snap_shot.json  lucky_spin_v2.json  lucky_spin_v2_backup.json  non_prod_uat_gold_zone.dynamic_notification.json  post_check.json  post_check_r6.json  post_check_r7.json  saoke_huydong.json  saoke_huydong_batch.json  saoke_huydong_raw.json  test.json  tm_account__snp.json  v_vk_hdss_tnx.json  vk-saoke-huydong-nhan.json  vk_atm_withdraw_reconciliation.json  vk_atm_withdrawal_reconciliation_results_data.json  vk_avg_deposit_amount.json  vk_biometrics_notification.json  vk_card_dim_batch.json  vk_card_tnx_batch.json  vk_chovay.json  vk_cl_drawdown.json  vk_cl_invoice.json
finx-agentic/src/: __init__.py
finx-agentic/src/agents/: __init__.py  chart_builder.py  intent_router.py  knowledge.py  learning.py  manager.py  query_understanding.py  schema_discovery.py  sql_executor.py  validation.py  (+1 more)
finx-mcp/: .gitignore  main.py  pyproject.toml  server.py  start_server_sse.sh
finx-mcp/src/: __init__.py
(+276 files in other folders)
